--- a/index.html
+++ b/index.html
@@ -1,329 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>HB Graphics Skill Games & Services</title>
-<style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #001f3f, #ff4136);
-    color: white;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-
-  header {
-    background: rgba(255, 255, 255, 0.1);
-    padding: 1rem;
-    border-bottom: 2px solid rgba(255,255,255,0.2);
-  }
-
-  h1 {
-    font-size: 1.6rem;
-    margin: 0;
-  }
-
-  nav {
-    display: flex;
-    overflow-x: auto;
-    background: rgba(0,0,0,0.3);
-    padding: 0.5rem;
-  }
-
-  nav button {
-    flex: 1;
-    min-width: 150px;
-    padding: 0.7rem;
-    margin: 0.2rem;
-    background: #ff9800;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    transition: transform 0.2s, background 0.3s;
-  }
-
-  nav button:hover {
-    background: #ffa726;
-    transform: scale(1.05);
-  }
-
-  main {
-    padding: 1rem;
-    max-width: 600px;
-    margin: 0 auto;
-  }
-
-  .question-box {
-    background: rgba(255, 255, 255, 0.15);
-    border-radius: 12px;
-    padding: 1rem;
-    margin: 1rem auto;
-  }
-
-  .answers button {
-    display: block;
-    width: 90%;
-    margin: 0.4rem auto;
-    padding: 0.8rem;
-    background: orange;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background 0.3s, transform 0.2s;
-  }
-
-  .answers button:hover {
-    transform: scale(1.05);
-    background: #ffa500;
-  }
-
-  .answers button.correct {
-    background: green !important;
-    animation: pulse 0.4s ease;
-  }
-
-  .answers button.wrong {
-    background: red !important;
-    animation: shake 0.4s ease;
-  }
-
-  @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.1); }
-    100% { transform: scale(1); }
-  }
-
-  @keyframes shake {
-    0% { transform: translateX(0); }
-    25% { transform: translateX(-5px); }
-    50% { transform: translateX(5px); }
-    75% { transform: translateX(-5px); }
-    100% { transform: translateX(0); }
-  }
-
-  .services {
-    background: rgba(0,0,0,0.3);
-    border-radius: 12px;
-    padding: 1rem;
-    margin: 2rem auto;
-    max-width: 600px;
-  }
-
-  .services h2 {
-    margin-top: 0;
-  }
-
-  .services ul {
-    text-align: left;
-    list-style: none;
-    padding: 0;
-    font-weight: 600;
-  }
-
-  .services ul li {
-    margin: 0.4rem 0;
-  }
-
-  .ai-section {
-    background: rgba(255,255,255,0.15);
-    border-radius: 12px;
-    padding: 1rem;
-    margin: 1rem auto;
-    max-width: 600px;
-  }
-
-  .ai-input {
-    display: flex;
-    justify-content: center;
-    margin-top: 0.5rem;
-  }
-
-  .ai-input input {
-    flex: 1;
-    padding: 0.6rem;
-    border: none;
-    border-radius: 8px 0 0 8px;
-  }
-
-  .ai-input button {
-    padding: 0.6rem 1rem;
-    background: #ff9800;
-    border: none;
-    border-radius: 0 8px 8px 0;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-  }
-
-  footer {
-    margin-top: 2rem;
-    font-size: 0.9rem;
-    background: rgba(0,0,0,0.3);
-    padding: 1rem;
-  }
-
-  footer a {
-    color: #ff9800;
-    text-decoration: none;
-  }
-
-  @media (max-width: 480px) {
-    h1 { font-size: 1.3rem; }
-    nav button { font-size: 0.8rem; padding: 0.5rem; }
-  }
-</style>
-</head>
-<body>
-<header>
-  <h1>🎮 HB Graphics Skill Games & Creative AI</h1>
-</header>
-
-<nav id="gameNav"></nav>
-
-<main>
-  <div class="question-box" id="quizBox">
-    <h2 id="question">Loading questions...</h2>
-    <div class="answers" id="answers"></div>
-  </div>
-
-  <div class="services">
-    <h2>🎨 Our Services</h2>
-    <ul>
-      <li>✔ Graphic Design</li>
-      <li>✔ Embroidery</li>
-      <li>✔ Digital Marketing</li>
-      <li>✔ Facebook Page Management</li>
-      <li>✔ Vehicle Import & Registration Services</li>
-      <li>✔ T-Shirt Printing</li>
-    </ul>
-  </div>
-
-  <div class="ai-section">
-    <h2>🤖 Honest AI</h2>
-    <p id="aiOutput">Ask me anything!</p>
-    <div class="ai-input">
-      <input type="text" id="aiInput" placeholder="Type your question..." />
-      <button onclick="askAI()">Ask</button>
-    </div>
-  </div>
-</main>
-
-<footer>
-  <p>💬 Appreciate HB Graphics for this free learning platform!</p>
-  <p>
-    📧 Email: <a href="mailto:hb4life40@gmail.com">hb4life40@gmail.com</a><br/>
-    💬 WhatsApp: <a href="https://wa.me/260776942402" target="_blank" rel="noopener">Chat on WhatsApp</a><br/>
-    💸 Mobile Money: <strong>0776 942 402 (Honest Bulilu)</strong>
-  </p>
-</footer>
-
-<script src="questions.js"></script>
-
-<script>
-  // Sound effects for answers
-  const correctSound = new Audio("https://cdn.pixabay.com/download/audio/2022/03/15/audio_5c2c858e39.mp3?filename=correct-answer-2-37964.mp3");
-  const wrongSound = new Audio("https://cdn.pixabay.com/download/audio/2022/03/15/audio_b06a9f4a45.mp3?filename=wrong-buzzer-6268.mp3");
-
-  const allGames = window.ALL_QUESTIONS;
-  const gameNav = document.getElementById("gameNav");
-  const quizBox = document.getElementById("quizBox");
-  const questionElem = document.getElementById("question");
-  const answersElem = document.getElementById("answers");
-
-  let currentCategory = Object.keys(allGames)[0];
-  let questionIndex = 0;
-
-  Object.keys(allGames).forEach(category => {
-    const btn = document.createElement("button");
-    btn.textContent = category;
-    btn.onclick = () => startGame(category);
-    gameNav.appendChild(btn);
-  });
-
-  function startGame(category) {
-    currentCategory = category;
-    questionIndex = 0;
-    showQuestion();
-  }
-
-  function showQuestion() {
-    const questions = allGames[currentCategory];
-    if (!questions) {
-      questionElem.textContent = "No questions available.";
-      answersElem.innerHTML = "";
-      return;
-    }
-
-    const q = questions[questionIndex % questions.length];
-    questionElem.textContent = q.question;
-    answersElem.innerHTML = "";
-
-    // Shuffle answers
-    q.answers.sort(() => Math.random() - 0.5).forEach(answer => {
-      const btn = document.createElement("button");
-      btn.textContent = answer;
-      btn.onclick = () => checkAnswer(btn, answer === q.correct);
-      answersElem.appendChild(btn);
-    });
-  }
-
-  function checkAnswer(button, correct) {
-    if (correct) {
-      button.classList.add("correct");
-      correctSound.play();
-      setTimeout(() => {
-        questionIndex++;
-        showQuestion();
-      }, 800);
-    } else {
-      button.classList.add("wrong");
-      wrongSound.play();
-    }
-  }
-
-  // Honest AI logic with voice
-  const aiOutput = document.getElementById("aiOutput");
-  const synth = window.speechSynthesis;
-
-  function askAI() {
-    const input = document.getElementById("aiInput").value.trim();
-    if (!input) return;
-
-    // Simple canned responses, random for demo
-    const responses = [
-      "That's a great question! Let me think...",
-      "Hmm, interesting. I’d say focus on creativity and consistency.",
-      "You're on the right path! Keep learning and practicing.",
-      "That depends on your goals — what are you trying to achieve?",
-      "Good one! I’d recommend you experiment with design tools."
-    ];
-    const response = responses[Math.floor(Math.random() * responses.length)];
-    aiOutput.textContent = "Honest AI: " + response;
-    speak(response);
-  }
-
-  function speak(text) {
-    if (!synth) return;
-
-    const utter = new SpeechSynthesisUtterance(text);
-    utter.pitch = 1;
-    utter.rate = 1;
-    utter.volume = 1;
-    const voice = synth.getVoices().find(v => v.lang.startsWith("en"));
-    if (voice) utter.voice = voice;
-
-    synth.cancel();
-    synth.speak(utter);
-  }
-
-  // Start first game on load
-  startGame(currentCategory);
-</script>
-</body>
-</html>
+const games = [
+  {
+    id: "game1",
+    title: "Your Game Name",
+    questions: [
+      {
+        question: "What is 2 + 2?",
+        answers: ["3", "4", "5", "6"],
+        correctIndex: 1
+      },
+      // add up to 100+ question objects here
+    ],
+  },
+  // more games...
+];
