Updated page names and links on homepage

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
 
   <header>
-    <img src="hb_logo.png" alt="HB Graphics Logo" />
+    <img src="hb logo.jpg.jpeg" alt="HB Graphics Logo" />
     <h1>HB Graphics Zambia</h1>
     <p style="color:#fff;">Graphic Design | Branding | Printing | Laser Engraving | Web & App Solutions</p>
   </header>
