Updated page names and links on homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       padding: 20px;
     }
     header img {
-      width: 150px;
+      width: 300px; /* Increased from 150px */
       border-radius: 10px;
     }
     header h1 {
